--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,6 @@
   <meta name="description" content="Web site created using create-react-app" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
-  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
   <!-- Font Import  -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -17,6 +16,13 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Lexend+Deca&family=Truculenta:opsz,wdth,wght@12..72,75..125,100..900&display=swap"
     rel="stylesheet">
+  <style>
+    * {
+      font-family: '"Lexend Deca", sans-serif' !important;
+      font-style: normal !important;
+      font-optical-sizing: none !important;
+    }
+  </style>
   <title>React App</title>
 </head>
 
