--- a/public/index.html
+++ b/public/index.html
@@ -16,11 +16,15 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Lexend+Deca&family=Truculenta:opsz,wdth,wght@12..72,75..125,100..900&display=swap"
     rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
+    rel="stylesheet">
   <style>
     * {
-      font-family: '"Lexend Deca", sans-serif' !important;
-      font-style: normal !important;
-      font-optical-sizing: none !important;
+      font-family: "Raleway", sans-serif;
+      font-optical-sizing: auto;
+      font-style: normal;
     }
   </style>
   <title>React App</title>
